-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.861 2011-02-26 17:43:34 guru Exp $
-----------------------------------------------------------------------------------------
2011-02-25	pwessel
	x2sys/x2sys_datalist.c:	When geographic data and -R it failed to consider periodic lons.
	x2sys/x2sys_get.c:	The -N option did not work properly, and the reported Y|N flags
				reflected the entire track on not just the portion inside the
				region.  Man page updated to clarify what is returned.
	* gmt_cdf.c:		Apply netcdf fix; thanks to Sebastian Heimann.
	* gmt_nc.c:		---"---

2011-02-25	jluis
	* gmt_grdio.c:		Increase the size of the string array in GMT_grd_get_units() to
				avoid 'Buffer overrun' that occurred with long description strings

2011-02-23	pwessel
	spotter/backtracker.c:	For -W, now report full-length major/minor axes and not
				SEMI-axes (docs said major/minor but code did semi.)

2011-02-22	pwessel
	* gmt_init.c:		The symbol_parsing for psxy[z] did not properly set the
				column types when no symbol size was given.  This affected
				symbols that require angles (-Sw, -SE, -SJ) when unit was SI.

2011-02-17	pwessel
	* gmt_init.c:		The -: option messed up the column type arrays; should
				only swap x|y data columns, not type columns.

2011-02-16	jluis
	* grdproject.c:		Not providing -R was not working anymore.
				Test if hemisphere sign is provided when doing -Ju and no -R

2011-02-10	pwessel
	* pslib.c:		Add check for incomplete escape sequences.

2011-02-09	pwessel
	* grdclip.c:		Now complains if no -S option was given.

2011-02-08	pwessel
	* grdtrack.c:		Message about -L being obsolete should only come when no
				modifier is given; else it is valid for BC setting.

2011-01-25	pwessel
	* pscontour.c:		Did not find some contours following triangle edges.

2011-01-17	pwessel
	* x2sys/x2sys_init.c:	Did not write both of -Nd -Ns to the tag file.

2011-01-11	remko