@@ -1,6 +1,12 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.861 2011-02-26 17:43:34 guru Exp $
+	$Id: ChangeLog,v 1.862 2011-02-26 17:44:10 guru Exp $
 -----------------------------------------------------------------------------------------
+-----------------------------------------------------------------------------------------
+2011-03-01	pwessel
+	* GMT 4.5.6 finalized and released.  GMT cvs archive moved to GMT4
+	  GMT5 branch merged to new trunk and converted to subversion.
+-----------------------------------------------------------------------------------------
+
 2011-02-25	pwessel
 	x2sys/x2sys_datalist.c:	When geographic data and -R it failed to consider periodic lons.
 	x2sys/x2sys_get.c:	The -N option did not work properly, and the reported Y|N flags
